fix bug: on ios

--- a/src/pages/login/styles.css
+++ b/src/pages/login/styles.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: space-evenly;
     gap: 20px;
+    background-color: #fff;
 }
 
 .loginPage > * {
